# skim

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELATED.md  post.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
outputs/: 2603.10165_gist.md  2603.10165_tech_summary.md
skills/deep/: SKILL.md
skills/story/: SKILL.md
src/skim/: arxiv.py  cache.py  claude_backend.py  cli.py  config.py  init_cmd.py  latex.py  llm.py  viewer.py
src/skim/prompts/: deep.md  story.md
tests/: test_arxiv.py  test_cache.py  test_claude_backend.py  test_cli.py  test_config.py  test_init_cmd.py  test_latex.py  test_llm.py  test_viewer.py
